@@ -1,0 +1,1 @@
+SUBDIRS = libvxi11 libics src 
