@@ -1,13 +1,16 @@
-CFLAGS=-g -Wall -Wno-unused
-LDADD=-lrpcsvc -lm -fPIC
-LIBOBJS=  ics.o ics8000_clnt.o ics8000_xdr.o
-LIB=libics.a
+noinst_LIBRARIES = libics.a
 
-$(LIB): $(LIBOBJS)
-	  ar rv $@ $(LIBOBJS)
+libics_a_SOURCES = \
+	ics.c \
+	ics8000_clnt.c \
+	ics8000_xdr.c \
+	ics8000.h
 
-$(LIBOBJS): ics8000.h
+AM_CFLAGS =  -Wall -Wno-unused
 
+CLEANFILES = ics8000.h ics8000_xdr.c ics8000_clnt.c ics8000_svc.c
+
+ics.c: ics8000.h
 ics8000.h: ics8000.x
 	rm -f $@; rpcgen -o $@ -h ics8000.x
 ics8000_xdr.c: ics8000.x ics8000.h
@@ -16,7 +19,3 @@ ics8000_clnt.c: ics8000.x ics8000.h
 	rm -f $@; rpcgen -o $@ -l ics8000.x
 ics8000_svc.c:  ics8000.x ics8000.h
 	rm -f $@; rpcgen -o $@ -m ics8000.x
-
-clean:
-	rm -f *.o *.a
-	rm -f ics8000.h ics8000_xdr.c ics8000_clnt.c ics8000_svc.c
