@@ -26,6 +26,5 @@ main(int argc, char *argv[])
 		exit(1);
 	}
 	vxi11_destroy(v);
-
 	exit(0);
 }
